--- a/package.json
+++ b/package.json
@@ -10,17 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.3.1",
-    "@astrojs/react": "^3.0.9",
+    "@astrojs/solid-js": "^3.0.3",
     "@astrojs/tailwind": "^5.0.2",
     "@astrojs/vercel": "^5.1.0",
     "@supabase/supabase-js": "^2.38.4",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
     "astro": "^3.4.3",
     "axios": "^1.6.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "solid-js": "^1.8.7",
     "tailwindcss": "^3.0.24",
     "typescript": "^5.2.2"
   },
@@ -29,6 +25,8 @@
     "daisyui": "latest",
     "jsdom": "^23.0.0",
     "jsdom-global": "^3.0.2",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "prettier": "^3.1.1",
+    "prettier-plugin-astro": "^0.12.3"
   }
 }
