--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.0.9",
     "@astrojs/solid-js": "^3.0.3",
     "@astrojs/tailwind": "^5.0.2",
     "@astrojs/vercel": "^5.1.0",
     "@supabase/supabase-js": "^2.38.4",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
     "astro": "^3.4.3",
     "axios": "^1.6.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "solid-js": "^1.8.7",
     "tailwindcss": "^3.0.24",
     "typescript": "^5.2.2"
