--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.10",
+    "cypress": "^13.6.2",
     "daisyui": "latest",
     "jsdom": "^23.0.0",
     "jsdom-global": "^3.0.2",
