--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
     "astro": "astro"
   },
   "dependencies": {
@@ -19,6 +21,7 @@
     "@types/react-dom": "^18.2.18",
     "astro": "^3.4.3",
     "axios": "^1.6.3",
+    "cypress": "^13.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "solid-js": "^1.8.7",
@@ -27,7 +30,6 @@
   },
   "devDependencies": {
     "chai": "^4.3.10",
-    "cypress": "^13.6.2",
     "daisyui": "latest",
     "jsdom": "^23.0.0",
     "jsdom-global": "^3.0.2",
