--- a/package.json
+++ b/package.json
@@ -29,12 +29,16 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "chai": "^4.3.10",
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.6",
+    "chai": "^5.0.0",
     "daisyui": "latest",
     "jsdom": "^23.0.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
-    "prettier-plugin-astro": "^0.12.3"
+    "prettier-plugin-astro": "^0.12.3",
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.2"
   }
 }
